PHASE-02 unit 9: docs/developer/architecture.rst, the layering as built